# linescaleGUI

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  Doxyfile  README.md  class_connection_widget.html  class_connection_widget_afe8f98a2ebbe99090ef955a95a4b3399_icgraph.dot  class_dialog_about-members.html  class_dialog_connect__inherit__graph.dot  class_dialog_connect_a7bbd0bcf4ca09c12e387da17e6353424_icgraph.dot  class_dialog_debug.html  class_dialog_debug_aaf8cb281c2472853996a680b59bb42f2_icgraph.dot  class_main_window-members.html  class_main_window__coll__graph.dot  class_main_window_a22920462729125179f363c2eb11b0fe2_icgraph.dot  class_notification-members.html  class_parser_a0904f63d16c490f8c0d1a37d39c07f0a_icgraph.dot  class_parser_a9df908c7f2e84ec62a3ab541a086073f_icgraph.dot  class_parser_abb022bc12ff85330ac74193703f69102_icgraph.dot  classcomm_1_1_comm_device.html  classcomm_1_1_comm_device__coll__graph.dot  classcomm_1_1_comm_device__inherit__graph.dot  classcomm_1_1_comm_device_a02700ac6850a8d908630a5ca7b000719_icgraph.dot  classcomm_1_1_comm_device_a48d6a41c66514a5179f1d3c4eacb446f_icgraph.dot  classcomm_1_1_comm_device_a9511151e2cd6a369ea299915c957697f_icgraph.dot  classcomm_1_1_comm_master__inherit__graph.dot  classcomm_1_1_comm_master_a56d99ac78908f87663c07b401c4d50cf_icgraph.dot  classcomm_1_1_comm_master_ab4290bf47f19360b801c82e52cc2bfd4_icgraph.dot  classcomm_1_1_comm_master_ae7bbc2f4ecf3dce003260b666780a689_icgraph.dot  classcomm_1_1_comm_u_s_b-members.html  classcomm_1_1_comm_u_s_b_ad37cdf76196c13ec5e8225853b3f6d05_icgraph.dot  classes.html  comm_device_8h.html  comm_master_8cpp__incl.dot  comm_master_8h__incl.dot  comm_master_8h_source.html  comm_u_s_b_8h_source.html  command_8h__dep__incl.dot  command_8h__incl.dot  (+32 more)
.github/workflows/: ci.yml  documentation.yml  release.yml
assets/: resource.qrc
assets/app/: appIcon.rc  linescaleGUI.desktop  linescaleGUI.desktop.in
design/: communication.md  issueTemplate.md  softwareArchitecture.md
doxygen/: _b_u_i_l_d_i_n_g_8md.html  _l_i_c_e_n_s_e_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  class_connection_widget-members.html  class_connection_widget.html  class_connection_widget__coll__graph.dot  class_connection_widget__coll__graph.map  class_connection_widget__coll__graph.md5  class_connection_widget__inherit__graph.dot  class_connection_widget__inherit__graph.map  class_connection_widget__inherit__graph.md5  class_connection_widget_abae7db7f76bb5ef89d3be9d3e253c737_icgraph.dot  class_connection_widget_abae7db7f76bb5ef89d3be9d3e253c737_icgraph.map  class_connection_widget_abae7db7f76bb5ef89d3be9d3e253c737_icgraph.md5  class_connection_widget_ad82afb5676b22e70cb2d53b5233a0a7d_icgraph.map  class_connection_widget_ad82afb5676b22e70cb2d53b5233a0a7d_icgraph.md5  class_connection_widget_afd7b82ac6da432c673e112cc67979f3d_icgraph.map  class_connection_widget_afd7b82ac6da432c673e112cc67979f3d_icgraph.md5  class_connection_widget_afe8f98a2ebbe99090ef955a95a4b3399_icgraph.map  class_connection_widget_afe8f98a2ebbe99090ef955a95a4b3399_icgraph.md5  class_connection_widget_aff6ac4fceb05ad8689e39e12f72697c2_icgraph.dot  class_connection_widget_aff6ac4fceb05ad8689e39e12f72697c2_icgraph.map  class_connection_widget_aff6ac4fceb05ad8689e39e12f72697c2_icgraph.md5  class_dialog_about-members.html  class_dialog_about.html  class_dialog_about__coll__graph.map  class_dialog_about__coll__graph.md5  class_dialog_about__inherit__graph.dot  class_dialog_about__inherit__graph.map  class_dialog_about__inherit__graph.md5  class_dialog_about_acbfa552dd5f2266db2187855a45fc0e9_icgraph.dot  class_dialog_about_acbfa552dd5f2266db2187855a45fc0e9_icgraph.map  class_dialog_about_acbfa552dd5f2266db2187855a45fc0e9_icgraph.md5  class_dialog_connect-members.html  class_dialog_connect.html  class_dialog_connect__coll__graph.dot  class_dialog_connect__coll__graph.map  class_dialog_connect__coll__graph.md5  class_dialog_connect__inherit__graph.map  (+460 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+52 more)
lib/: CMakeLists.txt
search/: all_0.js  all_2.js  all_5.js  all_8.js  all_9.js  all_e.js  classes_3.js  defines_3.js  defines_4.js  enumvalues_2.js  files_0.js  files_2.js  functions_1.js  functions_5.js  functions_7.js  functions_e.js  namespaces_0.js  variables_2.js  variables_c.js  variables_e.js
src/: main.cpp  notfication.cpp  notfication.h  version.h.in
src/deviceCommunication/: commDevice.h  commMaster.cpp  commMaster.h  commUSB.cpp  commUSB.h  command.h
src/deviceCommunication/bluetooth/: Bluetooth.cpp  Bluetooth.h  BluetoothDevice.cpp  BluetoothDevice.h  BluetoothService.cpp  BluetoothService.h  (+6 more)
src/graph/: graph.cpp  graph.h
src/gui/: connectionWidget.cpp  connectionWidget.h  connectionWidget.ui  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogconfigure.cpp  dialogconfigure.h  dialogconfigure.ui  dialogconnect.cpp  dialogconnect.h  dialogconnect.ui  dialogdebug.cpp  dialogdebug.h  dialogdebug.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotWidget.cpp  plotWidget.h
src/logfile/: logfile.cpp  logfile.h  logfileEditor.cpp  logfileEditor.h  logfileEditor.ui
src/logfileEditor/: dialogSave.ui  logfileEditor.ui
src/notification/: notification.cpp  notification.h
src/parser/: parser.cpp  parser.h
tests/: CMakeLists.txt  unit_tests.cpp
tests/inputFiles/: README.md  logfile0.csv  logfile1.csv  logfileErrorFloat.csv  logfileErrorInt.csv  logfileErrorSplit.csv  logfileErrorUnit.csv  logfile_long.csv  logfile_long1.csv
tests/units/: dummy.cpp  logfileTest.cpp  parserTest.cpp
tools/cmake/: CPackLinuxDeployQt.cmake.in  packaging.cmake  version.cmake  windeployqt.cmake
